--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
+    "@azure/msal-node": "^3.8.0",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
     "jsonwebtoken": "^9.0.2",
