--- a/.github/workflows/main_functionsilabo.yml
+++ b/.github/workflows/main_functionsilabo.yml
@@ -1,23 +1,55 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js project to Azure Function App - FunctionSilabo
+name: Build, Security Scan and Deploy Node.js project to Azure Function App - FunctionSilabo
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: "." # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: "22.x" # set this to the node version to use (supports 8.x, 10.x, 12.x)
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: "."
+  NODE_VERSION: "22.x"
 
 jobs:
-  build:
+  # -------------------
+  # 🧠 SAST - CodeQL Scan
+  # -------------------
+  codeql:
+    name: SAST - CodeQL Analysis
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      actions: read
+      contents: read
+      security-events: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: javascript
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:javascript"
+
+  # -------------------
+  # 🧰 Build Job
+  # -------------------
+  build:
+    runs-on: ubuntu-latest
+    needs: codeql
+    permissions:
+      contents: read
 
     steps:
       - name: "Checkout GitHub Action"
@@ -34,18 +66,22 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
           path: .
 
+  # -------------------
+  # ☁️ Deploy Job
+  # -------------------
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
@@ -68,6 +104,9 @@ jobs:
           slot-name: "Production"
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
 
+  # -------------------
+  # 🔔 Notificaciones
+  # -------------------
   notify:
     runs-on: ubuntu-latest
     needs: deploy
