--- a/.github/workflows/main_functionsilabo.yml
+++ b/.github/workflows/main_functionsilabo.yml
@@ -19,7 +19,7 @@ jobs:
   # -------------------
   codeql:
     name: SAST - CodeQL Analysis
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       actions: read
       contents: read
