--- a/.github/workflows/main_functionsilabo.yml
+++ b/.github/workflows/main_functionsilabo.yml
@@ -46,7 +46,7 @@ jobs:
   # 🧰 Build Job
   # -------------------
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: codeql
     permissions:
       contents: read
@@ -77,7 +77,7 @@ jobs:
   # ☁️ Deploy Job
   # -------------------
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     permissions:
       id-token: write
@@ -108,7 +108,7 @@ jobs:
   # 🔔 Notificaciones
   # -------------------
   notify:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: deploy
     steps:
       - name: Notify Slack on success
