--- a/.github/workflows/main_functionsilabo.yml
+++ b/.github/workflows/main_functionsilabo.yml
@@ -6,7 +6,7 @@ name: Build and deploy Node.js project to Azure Function App - FunctionSilabo
 on:
   push:
     branches:
-      - main
+      - test
   workflow_dispatch:
 
 env:
