--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts"
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0",
+    "@azure/functions": "^4.8.0",
+    "azure-functions-core-tools": "^4.3.0",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.6",
     "jsonwebtoken": "^9.0.2",
